# google-mailpilot

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLIENT_SETUP.md  Caddyfile.example  DOCKER_AUTH.md  DOCKER_README.md  Dockerfile  README.md  compose.yml  config.sample.yaml  debug_contacts.py  docker-compose.caddy.yml  docker-compose.postgres.yml  docker-compose.traefik.yml  docker-compose.yaml  docker-compose.yml  preferences.json  pyproject.toml  pytest.ini  run_mcp_cli_tests.sh  supervisord.conf  tasks.json  tasks.md
.github/workflows/: docker-publish.yml  docs.yml
.opencode/command/: triage-priority.md  triage-remaining.md
config/: config.sample.yaml
design_iterations/: mobile_optimized_1.html  security_sync_1.html  theme_1.css
docs/: AGENTS.md  DOCKER_GUIDE.md  OPENCODE-DOCS.md  USE_CASES.md  architecture-v3-plan.md  architecture.md  getting-started.md  index.md  package.json
docs/.vitepress/: config.js  config.mts
docs/api/: calendar.md  email.md  index.md  intelligence.md
docs/embeddings/: architecture.md  config-reference.md  cost.md  database-schema.md  dimensions.md  index.md  mcp-tools.md  migration.md  overview.md  performance.md  providers.md  quick-start.md  troubleshooting.md  web-ui.md
docs/guide/: agents.md  architecture.md  calendar.md  clients.md  configuration.md  docker.md  index.md  mutation-journal.md  oauth_workaround.md  opencode.md  security.md  semantic-search.md  threading.md  (+2 more)
imap_mcp/: calendar_client.py  config.py  gmail_client.py  imap_client.py  models.py  oauth2.py  resources.py  server.py  tools.py
scripts/: issue_status_updater.py  run_checks.sh  run_workspace_secretary.sh  tasks_to_issues.py  workspace_secretary_cli.py
tests/: conftest.py  test_auth_setup.py  test_browser_auth.py  test_calendar_client_unit.py  test_config.py  test_email_auth_signals.py  test_engine_email_endpoints.py  test_gmail_client_unit.py  test_imap_client.py  test_imap_client_drafts.py  test_infrastructure.py  test_models.py  test_oauth2_config.py  test_resources.py  test_server.py  test_smtp_client_composition.py  test_tasks_to_issues.py  test_tools.py  test_tools_orchestration.py  test_tools_reply.py  test_tools_reply_drafting.py  test_tools_tasks.py  test_utils.py
workspace_secretary/: __init__.py  app_password.py  auth_setup.py  batch_utils.py  browser_auth.py  cache.py  calendar_client.py  classifier.py  config.py  engine_client.py  gmail_auth.py  gmail_client.py  imap_client.py  mcp_protocol.py  models.py  oauth2.py  oauth2_config.py  resources.py  server.py  signals.py  smtp_client.py  tools.py
(+109 files in other folders)
